@@ -138,6 +138,15 @@ ooRexx 4.0.0 and future versions of ooRexx, there is no change in the
 3.2.0 uninstallation.  When a 3.2.0, or earlier, version of ooRexx is
 uninstalled, all files in the installation directory are deleted.
 
+The installation program now correctly sets up the .rex file associations
+when run with non-Admin privileges.  Note however, it is still advised to
+always run the installation and un-installation program using Admin
+privileges.
+
+The installation program now sets up Rexx program files with the .rex
+extension as drop handlers.  When a file is dropped on the icon for a Rexx
+program, the Windows Shell passes the complete file name path as the
+argument to the program.
 
 Windows Scripting Host:
 -----------------------
